Fix drawer scroll overflows

--- a/src/components/issue-form/index.scss
+++ b/src/components/issue-form/index.scss
@@ -1,5 +1,9 @@
 @import '../../style/colors';
 
+.form {
+  overflow-x: hidden;
+}
+
 .formFooter {
   background: white;
   margin-top: 32px;
